syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package chat;

option go_package = "github.com/xeeetu/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  repeated string usernames = 1; // имя пользователей в чате
}

message CreateResponse {
  int64 id = 1; // id создаваемого чата
}

message DeleteRequest {
  int64 id = 1; // id удаляемого чата
}

message SendMessageRequest {
  string from = 1; // от кого отправляется сообщение
  string text = 2; // содержание сообщения
  google.protobuf.Timestamp timestamp = 3; // время отправки сообщения
}